--- a/Source/CS_GO DEV/Tools/VMT_Editor_1.3.11/paths.ini
+++ b/Source/CS_GO DEV/Tools/VMT_Editor_1.3.11/paths.ini
@@ -1,3 +1,10 @@
 [General]
 roof_09_diff_4k=D:/Games/CS_GO DEV/Resources/roof_09_diff_4k.jpg
 roof_09_bump_4k=D:/Games/CS_GO DEV/Resources/roof_09_bump_4k.jpg
+
+[..]
+..\..\..\..\..\Games\Steam\steamapps\common\Counter-Strike%20Global%20Offensive\csgo\materials\Extra\brick_wall_003_diffuse_1k=C:/Users/julia/Desktop/brick_wall_003_diffuse_1k.png
+
+[Extra]
+brick_wall_003_diffuse_1k=C:/Users/julia/Desktop/brick_wall_003_diffuse_1k.png
+brick_wall_003_nor_1k=C:/Users/julia/Desktop/brick_wall_003_nor_1k.png
