--- a/Source/CS_GO DEV/Tools/VMT_Editor_1.3.11/settings.ini
+++ b/Source/CS_GO DEV/Tools/VMT_Editor_1.3.11/settings.ini
@@ -19,7 +19,7 @@ clearCacheAfterExit=false
 recentFileListStyle=false
 parameterSortStyle=false
 showShaderNameInTab=false
-lastGame=
+lastGame=Counter-Strike: Global Offensive
 diffuseSuffix=_d
 bumpSuffix=_n
 specSuffix=_s
@@ -30,10 +30,10 @@ mipmapSharpenFilter=Sharpen Soft
 cacheSize=true
 shaders=LightmappedGeneric?1?0??UnlitGeneric?1?0??VertexLitGeneric?1?0??WorldVertexTransition?1?0?1??UnlitTwoTexture?1??Lightmapped_4WayBlend?1?0?1?23?24??Cable?0??Decal?1??DecalModulate?1??Infected?0??Modulate?0??MonitorScreen?0??Patch?1??Predator?0??Refract?1??Shattered Glass?0??Sprite?1??SpriteCard?0??Water?1??
 latestVersion=1.3.11
-savedDate=19
+savedDate=20
 lastTextureConvertDir=D:\\Games\\Steam\\steamapps\\common\\Counter-Strike Global Offensive\\csgo\\materials\\4k
 lastConvertAddDirectory=D:/Games/CS_GO DEV/Resources/concrete_floor_painted_diff_4k.jpg
-lastSaveAsDir=D:\\Games\\Steam\\steamapps\\common\\Counter-Strike Global Offensive\\csgo\\materials\\4k
-recentFileList=D:/Games/Steam/steamapps/common/Counter-Strike Global Offensive/csgo/materials/test1.vmt
-mainWindowGeometry=@ByteArray(\x1\xd9\xd0\xcb\0\x2\0\0\0\0\x1\x63\0\0\0v\0\0\x6\x1c\0\0\x3\xb0\0\0\x1h\0\0\0\x8c\0\0\x6\x17\0\0\x3\xab\0\0\0\0\0\0\0\0\xf\0)
-mainWindowState=@ByteArray(\0\0\0\xff\0\0\0\0\xfd\0\0\0\x1\0\0\0\x1\0\0\x1\0\0\0\x3\xe\xfc\x2\0\0\0\x2\xfb\0\0\0*\0\x64\0o\0\x63\0k\0W\0i\0\x64\0g\0\x65\0t\0_\0v\0m\0t\0P\0r\0\x65\0v\0i\0\x65\0w\x1\0\0\0\x12\0\0\x2*\0\0\0T\0\xff\xff\xff\xfb\0\0\0*\0\x64\0o\0\x63\0k\0W\0i\0\x64\0g\0\x65\0t\0_\0m\0\x65\0s\0s\0\x61\0g\0\x65\0L\0o\0g\x1\0\0\x2?\0\0\0\xe1\0\0\0V\0\xff\xff\xff\0\0\x3\x90\0\0\x3\xe\0\0\0\x1\0\0\0\x2\0\0\0\x1\0\0\0\x2\xfc\0\0\0\x1\0\0\0\0\0\0\0\x1\0\0\0\xe\0t\0o\0o\0l\0\x62\0\x61\0r\x3\0\0\0\0\xff\xff\xff\xff\0\0\0\0\0\0\0\0)
+lastSaveAsDir=D:\\Games\\Steam\\steamapps\\common\\Counter-Strike Global Offensive\\csgo\\materials\\Extra
+recentFileList=D:/Games/Steam/steamapps/common/Counter-Strike Global Offensive/csgo/materials/Extra/test.vmt, D:/Games/Steam/steamapps/common/Counter-Strike Global Offensive/csgo/materials/test1.vmt
+mainWindowGeometry=@ByteArray(\x1\xd9\xd0\xcb\0\x2\0\0\0\0\x1\x63\0\0\0v\0\0\x6$\0\0\x3\xc5\0\0\x1l\0\0\0\x9d\0\0\x6\x1b\0\0\x3\xbc\0\0\0\0\0\0\0\0\xf\0)
+mainWindowState=@ByteArray(\0\0\0\xff\0\0\0\0\xfd\0\0\0\x1\0\0\0\x1\0\0\x1\0\0\0\x3\x5\xfc\x2\0\0\0\x2\xfb\0\0\0*\0\x64\0o\0\x63\0k\0W\0i\0\x64\0g\0\x65\0t\0_\0v\0m\0t\0P\0r\0\x65\0v\0i\0\x65\0w\x1\0\0\0\x1b\0\0\x2\"\0\0\0]\0\xff\xff\xff\xfb\0\0\0*\0\x64\0o\0\x63\0k\0W\0i\0\x64\0g\0\x65\0t\0_\0m\0\x65\0s\0s\0\x61\0g\0\x65\0L\0o\0g\x1\0\0\x2\x42\0\0\0\xde\0\0\0_\0\xff\xff\xff\0\0\x3\x7f\0\0\x3\x5\0\0\0\x1\0\0\0\x2\0\0\0\x1\0\0\0\x2\xfc\0\0\0\x1\0\0\0\0\0\0\0\x1\0\0\0\xe\0t\0o\0o\0l\0\x62\0\x61\0r\x3\0\0\0\0\xff\xff\xff\xff\0\0\0\0\0\0\0\0)
