Added js practice

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@
 Practices/C/arrays
 Practices/C/sort_array
 Practices/C/Algorithms/linear_search
+Practices/HTML 5/Computer-class/javascript/myapp/node_modules
