--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@ Practices/C/arrays
 Practices/C/sort_array
 Practices/C/Algorithms/linear_search
 Practices/HTML 5/Computer-class/javascript/myapp/node_modules
+Practices/rust/grrs/target
+Practices/rust/grrs/Cargo.lock
