--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ Practices/C/Algorithms/linear_search
 Practices/HTML 5/Computer-class/javascript/myapp/node_modules
 Practices/rust/grrs/target
 Practices/rust/grrs/Cargo.lock
+Practices/rust/grrs/test
