Added more js practices

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,5 @@ Practices/HTML 5/Computer-class/javascript/myapp/node_modules
 Practices/rust/grrs/target
 Practices/rust/grrs/Cargo.lock
 Practices/rust/grrs/test
+Practices/HTML 5/Computer-class/javascript/p1.zip
+Practices/HTML 5/Computer-class/javascript/p2.zip
