--- a/Practices/rust/grrs/Cargo.toml
+++ b/Practices/rust/grrs/Cargo.toml
@@ -8,3 +8,4 @@ edition = "2021"
 [dependencies]
 clap = { version = "4.0", features = ["derive"] }
 anyhow = { version = "1.0" }
+indicatif = { version = "0.17.3" }
