--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ Practices/rust/grrs/Cargo.lock
 Practices/rust/grrs/test
 Practices/HTML 5/Computer-class/javascript/p1.zip
 Practices/HTML 5/Computer-class/javascript/p2.zip
+Practices/HTML 5/Computer-class/javascript/p3.zip
