--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,4 @@ Practices/HTML 5/Computer-class/javascript/myapp/node_modules
 Practices/rust/grrs/target
 Practices/rust/grrs/Cargo.lock
 Practices/rust/grrs/test
-Practices/HTML 5/Computer-class/javascript/p1.zip
-Practices/HTML 5/Computer-class/javascript/p2.zip
-Practices/HTML 5/Computer-class/javascript/p3.zip
+Practices/HTML 5/Computer-class/javascript/*.zip
