--- a/.gitignore
+++ b/.gitignore
@@ -9,4 +9,4 @@ Practices/HTML 5/Computer-class/javascript/myapp/node_modules
 Practices/rust/grrs/target
 Practices/rust/grrs/Cargo.lock
 Practices/rust/grrs/test
-Practices/HTML 5/Computer-class/javascript/*.zip
+Practices/Javascript/*.zip
