change name of js practicies and added docs for secitec

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ Practices/rust/grrs/target
 Practices/rust/grrs/Cargo.lock
 Practices/rust/grrs/test
 Practices/Javascript/*.zip
+Practices/C++/OOP/test
