Transcription to typescript

--- a/.gitignore
+++ b/.gitignore
@@ -10,4 +10,5 @@ Practices/rust/grrs/target
 Practices/rust/grrs/Cargo.lock
 Practices/rust/grrs/test
 Practices/Javascript/*.zip
+Practices/Javascript/p7/*.js
 Practices/C++/OOP/test
