--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,5 @@ Practices/C++/OOP/test
 Practices/MATLAB/UTM_MATLAB
 Practices/C/hello
 UA/C/gfx/example
+.ccls-cache/@@Users@julianhinojosagil@Documents@Dev@My-beginner-repository
+UA/C/test
