changes to programing practice session

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,5 @@ Practices/C/hello
 UA/C/gfx/example
 .ccls-cache/@@Users@julianhinojosagil@Documents@Dev@My-beginner-repository
 UA/C/test
+UA/C/.clang_format
+UA/C/trian
