--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "Projectos/p2st"]
-	path = Projectos/p2st
-	url = https://github.com/ElTitoDG/p2st
+	path = Projectos/CWebServer
+	url = https://github.com/ElTitoDG/CWebServer
