--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "Projectos/Repos/SDL2DEngine"]
 	   path = Projectos/Repos/SDL2DEngine
 	   url = https://github.com/ElTitoDG/SDL2DEngine
+[submodule "Projectos/Repos/OLD_C-HTTP-WebServer"]
+	path = Projectos/Repos/OLD_C-HTTP-WebServer
+	url = https://github.com/ElTitoDG/OLD_C-HTTP-WebServer
