--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "Projectos/Repos/ExpoTutorial_StickerSmash"]
 	path = Projectos/Repos/ExpoTutorial_StickerSmash
 	url = https://github.com/ElTitoDG/ExpoTutorial_StickerSmash.git
+[submodule "Projectos/Repos/final_semestre"]
+	path = Projectos/Repos/final_semestre
+	url = https://github.com/ElTitoDG/final_semestre.git
