--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,4 @@ UA/C/s7-cuad
 Practices/nodejs/node_modules
 Practices/nodejs/expressjs/node_modules
 Practices/python/.idea
+Practices/flutter/toktik/assets/videos/*
