--- a/Practices/flutter/toktik/pubspec.yaml
+++ b/Practices/flutter/toktik/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: any
+  provider: ^6.1.4
 
 dev_dependencies:
   flutter_test:
