--- a/Practices/flutter/toktik/pubspec.yaml
+++ b/Practices/flutter/toktik/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: any
   provider: ^6.1.4
+  intl: ^0.20.2
+  animate_do: ^4.2.0
 
 dev_dependencies:
   flutter_test:
